language/move-lang/tests/move_check/translated_ir_tests/signer/is_resource_unused.exp
error: 

   ┌── tests/move_check/translated_ir_tests/signer/is_resource_unused.move:2:23 ───
   │
 2 │       fun t(_s: signer) {
   │ ╭───────────────────────^
 3 │ │     }
   │ ╰─────^ Invalid return
   ·
 2 │     fun t(_s: signer) {
   │           -- The parameter '_s' still contains a resource value. The resource must be consumed before the function returns
   │

