language/move-lang/tests/move_check/translated_ir_tests/signer/is_resource_unused.move
module M {
    fun t(_s: signer) {
    }
}

// check: UNSAFE_RET_UNUSED_RESOURCES
